--- a/SeScreenWindowSetter/SeScreenWindowSetter.csproj
+++ b/SeScreenWindowSetter/SeScreenWindowSetter.csproj
@@ -60,7 +60,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="FHotkey\HandlerHotkey.cs" />
+    <Compile Include="FHotkey\Win32Api.cs" />
+    <Compile Include="FpExtensions.cs" />
     <Compile Include="FScreen\ManagerScreen.cs" />
+    <Compile Include="FScreen\ManagerScreenModel.cs" />
+    <Compile Include="FScreen\SplitScreen.cs" />
+    <Compile Include="FScreen\Win32Api.cs" />
     <Compile Include="FWindow\ManagerWindow.cs" />
     <Compile Include="FWindow\ModWindow.cs" />
     <Page Include="MainWindow.xaml">
@@ -76,6 +81,7 @@
     <Compile Include="FHotkey\MainHotkey.cs" />
     <Compile Include="FHotkey\ModelHotkey.cs" />
     <Compile Include="FHotkey\ModHotkey.cs" />
+    <Compile Include="FWindow\Win32Api.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -99,6 +105,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="managerScreen.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
