--- a/SeScreenWindowSetter/SeScreenWindowSetter.csproj
+++ b/SeScreenWindowSetter/SeScreenWindowSetter.csproj
@@ -62,9 +62,12 @@
     <Compile Include="FHotkey\HandlerHotkey.cs" />
     <Compile Include="FHotkey\Win32Api.cs" />
     <Compile Include="FpExtensions.cs" />
+    <Compile Include="FScreen\BridgeConfigAndScreenInfo.cs" />
     <Compile Include="FScreen\ManagerScreen.cs" />
     <Compile Include="FScreen\ManagerScreenModel.cs" />
-    <Compile Include="FScreen\SplitScreen.cs" />
+    <Compile Include="FScreen\PositionBlockState.cs" />
+    <Compile Include="FScreen\SetupState.cs" />
+    <Compile Include="FScreen\SetWindowsInPositionBlock.cs" />
     <Compile Include="FScreen\Win32Api.cs" />
     <Compile Include="FWindow\ManagerWindow.cs" />
     <Compile Include="FWindow\ModWindow.cs" />
