--- a/SeScreenWindowSetter/SeScreenWindowSetter.csproj
+++ b/SeScreenWindowSetter/SeScreenWindowSetter.csproj
@@ -78,7 +78,10 @@
     <Compile Include="FScreen\SetWindowsInPositionBlock.cs" />
     <Compile Include="FScreen\Win32Api.cs" />
     <Compile Include="FWindow\ManagerWindow.cs" />
+    <Compile Include="FWindow\ManagerWindowModels.cs" />
     <Compile Include="FWindow\ModWindow.cs" />
+    <Compile Include="FWindow\ProcessManager.cs" />
+    <Compile Include="FWindow\ProcessManagerModel.cs" />
     <Compile Include="Stackoverflow.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
