FState folder and cs added

--- a/SeScreenWindowSetter/SeScreenWindowSetter.csproj
+++ b/SeScreenWindowSetter/SeScreenWindowSetter.csproj
@@ -70,13 +70,15 @@
     <Compile Include="FHotkey\Win32Api.cs" />
     <Compile Include="FP\FpExtensions.cs" />
     <Compile Include="FP\Maybe.cs" />
-    <Compile Include="FScreen\BridgeConfigAndScreenInfo.cs" />
+    <Compile Include="FState\BridgeConfigAndScreenInfo.cs" />
     <Compile Include="FScreen\ManagerScreen.cs" />
     <Compile Include="FScreen\ManagerScreenModel.cs" />
-    <Compile Include="FScreen\PositionBlockState.cs" />
-    <Compile Include="FScreen\SetupState.cs" />
-    <Compile Include="FScreen\SetWindowsInPositionBlock.cs" />
+    <Compile Include="FState\ManagerState.cs" />
+    <Compile Include="FState\PositionBlockState.cs" />
+    <Compile Include="FState\SetupState.cs" />
+    <Compile Include="FState\SetWindowsInPositionBlock.cs" />
     <Compile Include="FScreen\Win32Api.cs" />
+    <Compile Include="FState\StateModel.cs" />
     <Compile Include="FWindow\ManagerWindow.cs" />
     <Compile Include="FWindow\ManagerWindowModels.cs" />
     <Compile Include="FWindow\ModWindow.cs" />
